syntax = "proto3";
package rdbrpc;

service RdbControl {
  rpc createNamespace(CreateNamespaceRequest) returns (CreateNamespaceReply) {}
  rpc listNamespace(ListNamespaceRequest) returns (ListNamespaceReply) {}
  rpc deleteNamespace(DeleteNamespaceRequest) returns (DeleteNamespaceReply) {}
  rpc createDeployment(CreateDeploymentRequest) returns (CreateDeploymentReply) {}
  rpc getDeployment(GetDeploymentRequest) returns (GetDeploymentReply) {}
  rpc listDeployment(ListDeploymentRequest) returns (ListDeploymentReply) {}
  rpc deleteDeployment(DeleteDeploymentRequest) returns (DeleteDeploymentReply) {}
  rpc createQueryScript(CreateQueryScriptRequest) returns (CreateQueryScriptReply) {}
  rpc deleteQueryScript(DeleteQueryScriptRequest) returns (DeleteQueryScriptReply) {}
}

message CreateNamespaceRequest {
  string id = 1;
}

message DeleteNamespaceRequest {
  string id = 1;
}

message CreateNamespaceReply {
  bool created = 1;
}

message DeleteNamespaceReply {
  bool deleted = 1;
}

message ListNamespaceRequest {
}

message ListNamespaceReply {
  repeated NamespaceBasicInfo namespaces = 1;
}

message NamespaceBasicInfo {
  string id = 1;
  int64 create_time = 2;
}

message CreateDeploymentRequest {
  string namespace_id = 1;
  string schema = 2;
  string plan = 3;
  string description = 4;
}

message CreateDeploymentReply {
  DeploymentId deployment_id = 1;
}

message DeploymentId {
  string id = 1;
}

message GetDeploymentRequest {
  string namespace_id = 1;
  string deployment_id = 2;
}

message GetDeploymentReply {
  DeploymentFullInfo info = 1;
}

message ListDeploymentRequest {
  string namespace_id = 1;
}

message ListDeploymentReply {
  repeated DeploymentBasicInfo deployments = 1;
}

message DeploymentBasicInfo {
  string id = 1;
  int64 create_time = 2;
  string description = 3;
}

message DeploymentFullInfo {
  string id = 1;
  int64 create_time = 2;
  string description = 3;
  string schema = 4;
  string plan = 5;
}

message CreateQueryScriptRequest {
  string namespace_id = 1;
  string id = 2;
  string associated_deployment = 3;
  string script = 4;
}

message CreateQueryScriptReply {
  bool created = 1;
}

message DeleteQueryScriptRequest {
  string namespace_id = 1;
  string id = 2;
}

message DeleteQueryScriptReply {
  bool deleted = 1;
}

message DeleteDeploymentRequest {
  string namespace_id = 1;
  string id = 2;
}

message DeleteDeploymentReply {
  bool deleted = 1;
}